--- a/views/all.ejs
+++ b/views/all.ejs
@@ -140,7 +140,7 @@
       <button class="button sign_up" onclick="showsignup()">SIGN UP</button>
     </div>
     <div class="butshif">
-      <a href="/google" class="loginBtn loginBtn--google">
+      <a href="/auth/google" class="loginBtn loginBtn--google">
         Login with Google
       </a>
     </div>
@@ -171,7 +171,7 @@
       </ul>
       <div class="tab-content">
         <div id="signup">
-          <form action="/userlogin" method="post" name="myForm" onsubmit="return(validate());">
+          <form action="/auth/userlogin" method="post" name="myForm" onsubmit="return(validate());">
             <div class="top-row">
               <div class="field-wrap">
                 <input type="text" placeholder="First Name" required autocomplete="off" name="fname" />
